# mwcomposerfromhell

./: .flake8  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.rst  LICENSE  README.rst  mypy.ini  regen.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
hooks/: pre-commit
mwcomposerfromhell/: __init__.py  __main__.py  cache.py  composer.py  magic_words.py  namespace.py  nodes.py  parser_tests_parser.py  store.py  templates.py
mwcomposerfromhell/modules/: String.py  __init__.py  string.py
tests/: __init__.py  test_composer.py  test_lists.py  test_magic_words.py  test_modules.py  test_namespaces.py  test_parser.py  test_tables.py  test_templates.py
tests/parser_tests/: __init__.py  test_mediawiki.py  test_parserTests.py  test_parser_tests_parser.py  test_reader.py  whitelist.txt
