[metadata]
name = mwcomposerfromhell
version = 0.5dev
description = Convert the parsed MediaWiki wikicode (using mwparserfromhell) to HTML.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Patrick Cloke
author_email = clokep@patrick.cloke.us
url = https://github.com/clokep/mwcomposerfromhell
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: ISC License (ISCL)

[options]
packages = find:
python_requires = >=3.6
install_requires = mwparserfromhell>=0.6.2

[options.extras_require]
dev =
    # For running tests.
    pytest==6.2.4
    coverage
    # Style checking.
    flake8==3.9.2
    flake8-builtins==1.5.3  # For disallowing shadowing of Python built-ins.
    flake8-import-order==0.18.1
    # Typing related.
    mypy
    # Formatting.
    black

[options.packages.find]
exclude = tests
